# humanoid-robots

./: README.md  README.txt
fetch_gazebo/: CMakeLists.txt
fetch_gazebo/launch/: playground2.launch
fetch_gazebo/models/table/: model.config  model.sdf
fetch_gazebo/worlds/: test_zone.sdf  test_zone1.sdf  test_zone2.sdf
fetch_gazebo_demo/scripts/: demo.py
fetch_waiter/: CMakeLists.txt  package.xml
fetch_waiter/launch/: better_waiter.launch  fetch_nav.launch  freight_nav.launch  pick_place_demo.launch  waiter.launch
fetch_waiter/scripts/: better_waiter.py  pick_place_demo.py  vectors.txt  visual.py  waiter.py
